--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./css/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
-    <p> Test maria </p>
+    <nav>
+        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
+        <ul>
+        <li class="first button"><a href="#">Home</a></li>
+        <li class="button"><a href="#">Accessibility</a></li>
+        <li class="button"><a href="#">Topical page</a></li>
+        <li class="button"><a href="#">Our campus</a></li>
+        <li class="button"><a href="#">About us</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <h1>Generelt</h1>
+        <img class="index-images" src="./images/campus_bilde1.jpg" alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis cras. Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur. Nunc sed blandit libero volutpat sed cras ornare arcu dui. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Vitae semper quis lectus nulla at volutpat. Nullam eget felis eget nunc lobortis. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.</p>
+        <p>Eget velit aliquet sagittis id. Pharetra diam sit amet nisl suscipit adipiscing bibendum est. Imperdiet sed euismod nisi porta lorem. Malesuada proin libero nunc consequat interdum varius sit. Proin nibh nisl condimentum id venenatis a condimentum vitae. Pulvinar neque laoreet suspendisse interdum consectetur. Enim nulla aliquet porttitor lacus luctus accumsan. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Laoreet suspendisse interdum consectetur libero. Nunc lobortis mattis aliquam faucibus purus in massa tempor. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Purus in massa tempor nec feugiat nisl pretium fusce id. Lacus sed viverra tellus in hac habitasse. At varius vel pharetra vel turpis nunc eget lorem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque. Ut aliquam purus sit amet luctus venenatis lectus. Mauris nunc congue nisi vitae suscipit tellus.</p>
+    </div>
+
 </body>
 </html>
