la til link til topical

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="nav-listen">
         <li class="first button"><a href="#">Home</a></li>
         <li class="button"><a href="#">Accessibility</a></li>
-        <li class="button"><a href="#">Topical page</a></li>
+        <li class="button"><a href="./topical.html">Topical page</a></li>
         <li class="button"><a href="#">Our campus</a></li>
         <li class="button"><a href="#">About us</a></li>
         </ul>
