--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
-        <ul class="nav-listen">
+        <ul class="navigations">
         <li class="first button"><a href="#">Home</a></li>
         <li class="button"><a href="#">Accessibility</a></li>
         <li class="button"><a href="./topical.html">Topical page</a></li>
