--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <nav>
         <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
         <ul class="navigations">
-        <li class="first button"><a href="#">Home</a></li>
-        <li class="button"><a class="nav-links" href="#">Accessibility</a></li>
-        <li class="button"><a class="nav-links" href="./topical.html">Topical page</a></li>
-        <li class="button"><a class="nav-links" href="#">Our campus</a></li>
-        <li class="button"><a class="nav-links" href="#">About us</a></li>
+        <li class="button"><a href="#">Home</a></li>
+        <li class="button"><a href="#">Accessibility</a></li>
+        <li class="button"><a href="./topical.html">Topical page</a></li>
+        <li class="button"><a href="#">Our campus</a></li>
+        <li class="button"><a href="#">About us</a></li>
         </ul>
     </nav>
 
