--- a/topical.html
+++ b/topical.html
@@ -3,22 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <link type="css" rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topical page</title>
 </head>
 
-<body>
-    <header>
-        <nav>
-            <title>Topical page</title>
-        </nav>
-    </header>
+<body class="topical">
+    <nav>
+        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo" />
+        <ul class="navigations">
+            <li class="first button"><a href="#">Home</a></li>
+            <li class="button"><a href="#">Accessibility</a></li>
+            <li class="button"><a href="./topical.html">Topical page</a></li>
+            <li class="button"><a href="#">Our campus</a></li>
+            <li class="button"><a href="#">About us</a></li>
+        </ul>
+    </nav>
 
     <main>
         <article>
-            <h1>Smarthones and universal design</h1>
-            <p>
+            <h1 class="overskrift">Smarthones and Universal Design</h1>
+            <p class="intro">
                 Norwegian government chooses to implement the European Accessibility Act
                 into Norwegian law and is prepared to issue large fines for digital services,
                 or devices that do not comply and adapt to the
@@ -28,8 +33,13 @@
         </article>
     </main>
 
-    <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
+    <!-- Foto: fra nettiden Medium.com artikkel "The evolution of mobile devices" -->
+    <figure class="bilder">
+        <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
+        <figcaption class="caption">Mobile phone evolution</figcaption>
+    </figure>
 
+    <!-- Dette er grid for key words på siden--> 
     <div class="terms">
         <h2>
             Key terms
@@ -44,9 +54,10 @@
             Dette er tredje key term
         </p>
 
-        <figure>
+        <!-- Foto: S92063042 fra nettiden Medium.com -->
+        <figure class="bilde1">
             <img src="./images/phones.jpeg" alt="Smartphones and mobile phones" />
-            <figcaption>Mobile phone evolution</figcaption>
+            <figcaption class="caption">Mobile phone evolution</figcaption>
         </figure>
     </div>
 
@@ -58,9 +69,9 @@
             Her skriver jeg om bruken...
         </p>
         <p> For more information visit
-            <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/" 
-            target="_blank">Insiderintelligence 
-        </a>
+            <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
+                target="_blank">Insiderintelligence
+            </a>
         </p>
     </div>
 
@@ -72,11 +83,10 @@
             teksten
         </p>
 
-        <!-- Endre denne linken til en relevant link-->
-        <p> For more information visit
-            <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/" 
-            target="_blank">Insiderintelligence 
-        </a>
+        <p> Read this research paper for more information
+            <a href="https://www.researchgate.net/publication/285675840_Inclusive_design_and_human_factors_Designing_mobile_phones_for_older_users"
+                target="_blank">ResearchGate
+            </a>
         </p>
     </div>
 
@@ -88,9 +98,9 @@
             teksten
         </p>
         <p> For more information visit
-            <a href="https://universaldesign.ie/What-is-Universal-Design/Case-studies-and-examples/Examples/Mobile-phone/" 
-            target="_blank">universaldesign 
-        </a>
+            <a href="https://universaldesign.ie/What-is-Universal-Design/Case-studies-and-examples/Examples/Mobile-phone/"
+                target="_blank">universaldesign
+            </a>
         </p>
     </div>
 
@@ -100,22 +110,103 @@
             design on all digital products?
         </h2>
         <p>
-            diskusjonsdelen 
+            diskusjonsdelen
         </p>
         <p> For more information visit
             <a href="https://www.mckinsey.com/capabilities/mckinsey-design/how-we-help-clients/design-blog/accessible-design-means-better-design"
-            target="_blank">McKinsey&Company 
-        </a>
+                target="_blank">McKinsey&Company
+            </a>
         </p>
     </div>
+
+
+        
+    <!--
+ <div>
+
+            <div class="bilder">
+                <a target="_blank" href="img_5terre.jpg">
+                    <img src="img_5terre.jpg" alt="Cinque Terre">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="./images/bilde1.jpeg">
+                    <img src="./images/bilde1.jpeg" alt="Mobiltelefon på 1990-tallet">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="img_lights.jpg">
+                    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="img_mountains.jpg">
+                    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+    </div>
+    -->
+
+    <footer class="footer">
+        <div class="container-footer">
+            <div class="logo-kolonne">
+                <a href="#" class="logo-footer">
+                    <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+
+                </a>
+                <ui class="sosiale-medier">
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                        </a>
+
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-instagram"></i><!-- instagram-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                        </a>
+                    </li>
+                </ui>
+                <p class="copyright">Copyright &copy; </p>
+
+            </div>
+            <div class="adresse-kolonne">
+                <p class="adresse-tittel">Kontakt oss </p>
+                <address class="kontakt">
+                    <p class="address">
+                        Pilestredet 46. Studenttorget
+                    </p>
+                    <p class="adresse-link">
+                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                    </p>
+                </address>
+            </div>
 </body>
 
 </html>
 
 <!--
-#bruke picture element??
+# bruke picture element??
 # skal css være i kronologisk rekkefølge for side etter hverandre?
 # link til external pages, burde en være button, en image osv eller holde meg til samme?
 
+
 Hva mener han med at den skal være annerledes, er det noe jeg burde vise frem her?
+
+Hvis jeg tar en kode fra w3school er det mulig å kunne se det?
+I så fall skal jeg bare forklare koden
 -->
