nav i alle sider

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
         <ul class="navigations">
         <li class="button"><a href="#">Home</a></li>
-        <li class="button"><a href="#">Accessibility</a></li>
+        <li class="button"><a href="./accessibility.html">Accessibility</a></li>
         <li class="button"><a href="./topical.html">Topical page</a></li>
-        <li class="button"><a href="#">Our campus</a></li>
+        <li class="button"><a href="./campus.html">Our campus</a></li>
         <li class="button"><a href="#">About us</a></li>
         </ul>
     </nav>
@@ -38,17 +38,7 @@
               Vitae semper quis lectus nulla at volutpat. Nullam eget felis eget nunc lobortis.
                Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.
             </p>
-       
-        <p class="avsnitt2">Eget velit aliquet sagittis id. Pharetra diam sit amet nisl suscipit adipiscing bibendum est. 
-            Imperdiet sed euismod nisi porta lorem. Malesuada proin libero nunc consequat interdum varius sit. 
-            Proin nibh nisl condimentum id venenatis a condimentum vitae. Pulvinar neque laoreet suspendisse interdum consectetur.
-             Enim nulla aliquet porttitor lacus luctus accumsan. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. 
-             Laoreet suspendisse interdum consectetur libero. Nunc lobortis mattis aliquam faucibus purus in massa tempor.
-              Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Purus in massa tempor nec feugiat nisl pretium fusce
-               id. Lacus sed viverra tellus in hac habitasse. At varius vel pharetra vel turpis nunc eget lorem. 
-               Id consectetur purus ut faucibus pulvinar elementum integer enim neque. 
-               Ut aliquam purus sit amet luctus venenatis lectus. Mauris nunc congue nisi vitae suscipit tellus.
-        </p>
+    
     </div>
 
     <!--FOOTER-->
