--- a/topical.html
+++ b/topical.html
@@ -15,7 +15,7 @@
             <li class="first button"><a href="#">Home</a></li>
             <li class="button"><a href="#">Accessibility</a></li>
             <li class="button"><a href="./topical.html">Topical page</a></li>
-            <li class="button"><a href="#">Our campus</a></li>
+            <li class="button"><a href="./campus.html">Our campus</a></li>
             <li class="button"><a href="#">About us</a></li>
         </ul>
     </nav>
