--- a/campus.html
+++ b/campus.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>campus</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Lenker til fonter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body class="topical">
     <nav>
@@ -16,3 +22,4 @@
             <li class="button"><a href="#">Our campus</a></li>
         </ul>
     </nav>    
+</html>
