--- a/topical.html
+++ b/topical.html
@@ -63,7 +63,9 @@
 
     <div class="grid-container">
         <div class="introtekst">
-            <!-- Foto: fra nettiden Medium.com artikkel "The evolution of mobile devices" -->
+            <!-- Foto: fra nettiden Medium.com artikkelnavn: "The evolution of mobile devices" (forfatter ikke oppgitt på)
+            Link: https://medium.com/@s92063042/history-and-evolution-of-smartphones-17987e6f91d1
+            -->
             <figure class="bilder">
                 <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
                 <figcaption class="caption">Mobile phone evolution</figcaption>
@@ -87,7 +89,9 @@
                 regardless of the user's experience, knowledge, language skills,
                 or current concentration level. </p>
 
-            <!-- Foto: S92063042 fra nettiden Medium.com -->
+            <!-- Foto: S92063042 fra nettiden techpoint.africa 
+            Artikkelnavn: Evolution of mobile phones in Nigeria: How competition made expensive phones cheap
+            Link: https://techpoint.africa/2020/02/28/mobile-phones-evolution-nigeria/ -->
             <figure class="bilde1">
                 <img src="./images/phones.jpeg" alt="Smartphones and mobile phones" />
                 <figcaption class="caption">Mobile phone evolution</figcaption>
