--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             </li>
             <li>
                 <a class="sosiale-link" href="#">
+                    <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                </a>
+            </li>
+            <li>
+                <a class="sosiale-link" href="#">
                     <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                 </a>
             </li>
