Co-authored-by: nidura123 <nidura123@users.noreply.github.com> Co-authored-by: Munaf2 <Munaf2@users.noreply.github.com>

--- a/topical.html
+++ b/topical.html
@@ -9,17 +9,8 @@
 </head>
 
 <body class="topical">
-    <nav>
-        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo" />
-        <ul class="navigations">
-            <li class="first button"><a href="./index.html">Home</a></li>
-            <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-            <li class="button"><a href="#">Topical page</a></li>
-            <li class="button"><a href="./campus.html">Our campus</a></li>
-        </ul>
-    </nav>
-
-    <!-- Starten på topical siden -->
+    
+    <!-- Starten på selve siden siden -->
     <main>
         <article>
             <div class="overskrift">
@@ -27,17 +18,13 @@
                 <h1 class="overskrift2"> Design</h1>
             </div>
 
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Search.." name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
         </article>
     </main>
 
-    <!-- search bar, til å kunne se på andre produkter laget med 
-    universal design.-->
+    
+<!--
+
+Dette er de andre tingene med universal design
     <div class="secondnav">
         <a class="atm" href="#ATM">ATM Machines</a>
         <a class="books" href="#E-books">E-books</a>
@@ -45,6 +32,10 @@
         <a class="transport" href="#Passenger transport">Passenger transport</a>
         <a class="split" href="#split"> </a>
     </div>
+
+
+-->
+
 
     <p class="smartphones"> Smartphones</p>
     <!-- Innledning etter overskriften -->
@@ -217,46 +208,7 @@
     </div>
     -->
 
-    <footer class="footer">
-        <div class="container-footer">
-            <div class="logo-kolonne">
-                <a href="#" class="logo-footer">
-                    <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
 
-                </a>
-                <ui class="sosiale-medier">
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
-                        </a>
-
-                    </li>
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-instagram"></i><!-- instagram-ikon -->
-                        </a>
-                    </li>
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
-                        </a>
-                    </li>
-                </ui>
-                <p class="copyright">Copyright &copy; </p>
-
-            </div>
-            <div class="adresse-kolonne">
-                <p class="adresse-tittel">Kontakt oss </p>
-                <address class="kontakt">
-                    <p class="address">
-                        Pilestredet 46. Studenttorget
-                    </p>
-                    <p class="adresse-link">
-                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
-                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
-                    </p>
-                </address>
-            </div>
 </body>
 
 </html>
