--- a/accessibility.html
+++ b/accessibility.html
@@ -15,7 +15,7 @@
     <nav>
         <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
         <ul class="navigations">
-        <li class="button"><a href="#">Home</a></li>
+        <li class="button"><a href="./index.html">Home</a></li>
         <li class="button"><a href="./accessibility.html">Accessibility</a></li>
         <li class="button"><a href="./topical.html">Topical page</a></li>
         <li class="button"><a href="./campus.html">Our campus</a></li>
