--- a/campus.html
+++ b/campus.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>campus</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <title>Document</title>
+    <link href="./css/stylesheet.css" rel="stylesheet" />
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
@@ -12,15 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body class="topical">
+<body>
     <nav>
-        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo" />
+        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
         <ul class="navigations">
-            <li class="first button"><a href="./index.html">Home</a></li>
-            <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-            <li class="button"><a href="./topical.html">Topical page</a></li>
-            <li class="button"><a href="#">Our campus</a></li>
+        <li class="button"><a href="./index.html">Home</a></li>
+        <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+        <li class="button"><a href="./topical.html">Topical page</a></li>
+        <li class="button"><a href="./campus.html">Our campus</a></li>
         </ul>
-    </nav>    
+    </nav>
     
+</body>
 </html>
