--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <nav>
-        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
+        <div class="logo">
+            <img src="./images/svart_logo_oslomet.png" alt="Oslomet logo"/>
+        </div>
         <ul class="navigations">
             <li class="button"><a href="./">Home</a></li>
             <li class="button"><a href="./accessibility.html">Accessibility</a></li>
@@ -26,18 +28,18 @@
     </nav>
 
     <div class="content">
-        <h1>Generelt</h1>
         <img class="index-images" src="./images/campus_bilde1.jpg" alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
-        <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-             eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis cras. 
-             Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at ultrices mi tempus. 
-             Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur. 
-             Nunc sed blandit libero volutpat sed cras ornare arcu dui. Erat pellentesque adipiscing commodo elit at 
-             imperdiet dui accumsan sit. Facilisi etiam dignissim diam quis enim lobortis scelerisque.
-              Vitae semper quis lectus nulla at volutpat. Nullam eget felis eget nunc lobortis.
-               Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.
+        <div class="introduction">
+            <h1>Velkommen til Oslomet</h1>
+            <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis cras. 
+                Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at ultrices mi tempus. 
+                Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur. 
             </p>
-    
+        </div>
+        <div class="news-articles">
+            <h1>Nyheter</h1>
+        </div>
     </div>
 
     <!--FOOTER-->
