--- a/topical.html
+++ b/topical.html
@@ -9,7 +9,6 @@
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-
 <body class="topical">
     <header>
         <nav class="topicalnav">
@@ -18,14 +17,12 @@
                 <h1 class="overskrift2"> Design</h1>
             </div>
 
-            <div class="navigationtopical">
-                <ul>
+            <ul class="navigations">
                     <li class="button"><a href="./index.html">Home</a></li>
                     <li class="button"><a href="./accessibility.html">Accessibility</a></li>
                     <li class="button"><a href="./topical.html">Topical page</a></li>
                     <li class="button"><a href="./campus.html">Our campus</a></li>
                 </ul>
-            </div>
         </nav>
     </header>
 
