--- a/topical.html
+++ b/topical.html
@@ -27,6 +27,11 @@
     </header>
 
     <main>
+    <section class="video">
+            <video width  =500px height=500px
+            
+            src="./images/pexels_videos_2795165 (360p).mp4"></video>
+        </section>
         <!-- Flex for å ha terms og introteksten side om side -->
         <section>
             <div class="flex-container">
