--- a/topical.html
+++ b/topical.html
@@ -27,10 +27,8 @@
     </header>
 
     <main>
-    <section class="video">
-            <video width  =500px height=500px
-            
-            src="./images/pexels_videos_2795165 (360p).mp4"></video>
+        <section>
+            <video src="./images/video (2160p).mp4"></video>
         </section>
         <!-- Flex for å ha terms og introteksten side om side -->
         <section>
