--- a/topical.html
+++ b/topical.html
@@ -28,8 +28,9 @@
 
     <main>
         <section>
-            <video src="./images/video (2160p).mp4"></video>
+            <video src="./images/pexels-anthony-shkraba-8207251 (360p).mp4"></video>
         </section>
+        
         <!-- Flex for å ha terms og introteksten side om side -->
         <section>
             <div class="flex-container">
