--- a/topical.html
+++ b/topical.html
@@ -27,8 +27,8 @@
     </header>
 
     <main>
-        <section>
-            <video src="./images/pexels-anthony-shkraba-8207251 (360p).mp4"></video>
+        <section class="video">
+            <video src="./images/video (360p).mp4"></video>
         </section>
         
         <!-- Flex for å ha terms og introteksten side om side -->
