--- a/accessibility.html
+++ b/accessibility.html
@@ -22,6 +22,63 @@
         </ul>
     </nav>
     
+
+
+
+    <!---Footers-->
+    <footer class="footer-accessibility">
+        <div class="foorer-container">
+            <div class="logo-kolonne">
+                <a href="#" class="logo-footer">
+                    <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+                </a>
+                <ui class="sosiale-medier">
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-instagram"></i><!-- instagram-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                        </a>
+                    </li>
+    
+                </ui>
+            </div>
+
+            <div class="adresse-kolonne">
+                <p class="adresse-tittel">Kontakt oss </p>
+                <address class="kontakt">
+                  <p class="address">
+                    Pilestredet 35. Studenttorget
+                  </p>
+                  <p class="adresse-link">
+                    <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a
+                    ><br />
+                    <a class="footer-link" href="mailto:hello@omnifood.com"
+                      >Oslomet@test.com
+                    </a>
+                  </p>
+                </address>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
 </body>
 </html>
 
