--- a/accessibility.html
+++ b/accessibility.html
@@ -26,8 +26,8 @@
 
 
     <!---Footers-->
-    <footer class="footer-accessibility">
-        <div class="foorer-container">
+    <footer class="footer">
+        <div class="container-footer">
             <div class="logo-kolonne">
                 <a href="#" class="logo-footer">
                     <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
@@ -50,12 +50,14 @@
                     </li>
                     <li>
                         <a class="sosiale-link" href="#">
-                            <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                            <i class="fab fa-linkedin-in"></i> <!-- twitter-ikon -->
                         </a>
                     </li>
     
                 </ui>
             </div>
+
+            <p class="copyright">Copyright &copy;</p>
 
             <div class="adresse-kolonne">
                 <p class="adresse-tittel">Kontakt oss </p>
@@ -74,10 +76,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
 </body>
 </html>
