--- a/accessibility.html
+++ b/accessibility.html
@@ -21,61 +21,82 @@
         <li class="button"><a href="./campus.html">Our campus</a></li>
         </ul>
     </nav>
+
+
+    <main>
+
+        <img src="./images/campus_bilde1.jpg" alt="bildet av oslo-met">
+    </main>
     
 
 
 
-    <!---Footers-->
-    <footer class="footer">
-        <div class="container-footer">
-            <div class="logo-kolonne">
-                <a href="#" class="logo-footer">
-                    <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
-                </a>
-                <ui class="sosiale-medier">
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
-                        </a>
-                    </li>
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-instagram"></i><!-- instagram-ikon -->
-                        </a>
-                    </li>
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
-                        </a>
-                    </li>
-                    <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-linkedin-in"></i> <!-- twitter-ikon -->
-                        </a>
-                    </li>
+
+
+
+
+
+
+
+     <!--FOOTER-->
+ <footer class="footer">
+    <div class="container-footer">
+     <div class="logo-kolonne">
+         <a href="#" class="logo-footer">
+             <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+ 
+         </a>
+         <ui class="sosiale-medier">
+             <li> 
+                 <a class="sosiale-link" href="#">
+                     <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                 </a>
+ 
+             </li>
+             <li>
+                 <a class="sosiale-link" href="#">
+                     <i class="fab fa-instagram"></i><!-- instagram-ikon -->
+                 </a>
+             </li>
+             <li>
+                 <a class="sosiale-link" href="#">
+                     <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                 </a>
+             </li>
+             <li>
+                 <a class="sosiale-link" href="#">
+                     <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                 </a>
+             </li>
+         </ui>
+         <p class="copyright">Copyright &copy; </p>
+ 
+     </div>
+     <div class="adresse-kolonne">
+         <p class="adresse-tittel">Kontakt oss </p>
+         <address class="kontakt">
+           <p class="address">
+             Pilestredet 35. Studenttorget
+           </p>
+           <p class="adresse-link">
+             <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a
+             ><br />
+             <a class="footer-link" href="mailto:hello@omnifood.com"
+               >Oslomet@test.com</a
+             >
+           </p>
+         </address>
+     </div>
+ 
+ </footer>
+
+
+
+
     
-                </ui>
-            </div>
 
-            <p class="copyright">Copyright &copy;</p>
 
-            <div class="adresse-kolonne">
-                <p class="adresse-tittel">Kontakt oss </p>
-                <address class="kontakt">
-                  <p class="address">
-                    Pilestredet 35. Studenttorget
-                  </p>
-                  <p class="adresse-link">
-                    <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a
-                    ><br />
-                    <a class="footer-link" href="mailto:hello@omnifood.com"
-                      >Oslomet@test.com
-                    </a>
-                  </p>
-                </address>
-            </div>
-        </div>
-    </footer>
+
 
 </body>
 </html>
