--- a/topical.html
+++ b/topical.html
@@ -39,7 +39,7 @@
             <div class="topicalflex-container">
                 <div class="introtekst">
 
-                    <p class="european"> European Accessibility Act</p>
+                    <h2 class="european"> European Accessibility Act</h2> 
 
                     <p>
                         Norwegian government chooses to implement the European Accessibility Act
@@ -174,6 +174,16 @@
                     </a>
                 </p>
             </div>
+        </div>
+
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7997.478628410925!2d10.848134!3d59.9260081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416f94db022e0b%3A0x226356eeae9490ee!2sElkj%C3%B8p%20Alna!5e0!3m2!1sno!2sno!4v1699283155386!5m2!1sno!2sno" 
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
 
