--- a/topical.html
+++ b/topical.html
@@ -176,7 +176,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="kart">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7997.478628410925!2d10.848134!3d59.9260081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416f94db022e0b%3A0x226356eeae9490ee!2sElkj%C3%B8p%20Alna!5e0!3m2!1sno!2sno!4v1699283155386!5m2!1sno!2sno" 
             width="600" 
             height="450" 
