--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Index</title>
     <link href="./css/stylesheet.css" rel="stylesheet" />
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
@@ -11,88 +12,104 @@
     <!-- Lenker til fonter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <nav>
-        <div class="logo">
-            <img src="./images/svart_logo_oslomet.png" alt="Oslomet logo"/>
-        </div>
-        <ul class="navigations">
-            <li class="button"><a href="./">Home</a></li>
-            <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-            <li class="button"><a href="./topical.html">Topical page</a></li>
-            <li class="button"><a href="./campus.html">Our campus</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./images/svart_logo_oslomet.png" alt="Oslomet logo" />
+            </div>
+            <ul class="navigations">
+                <li class="button"><a href="./">Home</a></li>
+                <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+                <li class="button"><a href="./topical.html">Topical page</a></li>
+                <li class="button"><a href="./campus.html">Our campus</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="content">
-        <img class="index-images" src="./images/campus_bilde1.jpg" alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
+        <img class="index-images" src="./images/campus_bilde1.jpg"
+            alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
         <div class="introduction">
             <h1>Velkommen til Oslomet</h1>
             <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis cras. 
-                Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at ultrices mi tempus. 
-                Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur. 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis
+                cras.
+                Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus.
+                Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur.
             </p>
         </div>
         <div class="news-articles">
             <h1>Nyheter</h1>
         </div>
     </div>
+    <!-- Kart Oslomet -->
+
+    <div class="kart">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7999.0357476956015!2d10.7353733!3d59.919548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e7bfda9fef5%3A0x1999a7ebc1b332a3!2sOsloMet%20-%20Biblioteket%20P35!5e0!3m2!1sno!2sno!4v1699286388345!5m2!1sno!2sno"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
 
     <!--FOOTER-->
- <footer class="footer">
-   <div class="container-footer">
-    <div class="logo-kolonne">
-        <a href="#" class="logo-footer">
-            <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
-
-        </a>
-        <ui class="sosiale-medier">
-            <li> 
-                <a class="sosiale-link" href="#">
-                    <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+    <footer class="footer">
+        <div class="container-footer">
+            <div class="logo-kolonne">
+                <a href="#" class="logo-footer">
+                    <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
                 </a>
 
-            </li>
-            <li>
-                <a class="sosiale-link" href="#">
-                    <i class="fab fa-instagram"></i><!-- instagram-ikon -->
-                </a>
-            </li>
-            <li>
-                <a class="sosiale-link" href="#">
-                    <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
-                </a>
-            </li>
-            <li>
-                <a class="sosiale-link" href="#">
-                    <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
-                </a>
-            </li>
-        </ui>
-        <p class="copyright">Copyright &copy; </p>
+                <ui class="sosiale-medier">
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                        </a>
 
-    </div>
-    <div class="adresse-kolonne">
-        <p class="adresse-tittel">Kontakt oss </p>
-        <address class="kontakt">
-          <p class="address">
-            Pilestredet 35. Studenttorget
-          </p>
-          <p class="adresse-link">
-            <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a
-            ><br />
-            <a class="footer-link" href="mailto:hello@omnifood.com"
-              >Oslomet@test.com</a
-            >
-          </p>
-        </address>
-    </div>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-instagram"></i><!-- instagram-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                        </a>
+                    </li>
+                    <li>
+                        <a class="sosiale-link" href="#">
+                            <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                        </a>
+                    </li>
+                </ui>
+            </div>
 
-</footer>
+            <div class="copyright">
+                <p class="copyright">Copyright &copy; </p>
+            </div>
+
+            <div class="adresse-kolonne">
+                <p class="adresse-tittel">Kontakt oss </p>
+                <address class="kontakt">
+                    <p class="address">
+                        Pilestredet 35. Studenttorget
+                    </p>
+                    <p class="adresse-link">
+                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                    </p>
+                </address>
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
