fixed position topical nav
jj

--- a/topical.html
+++ b/topical.html
@@ -12,22 +12,24 @@
 
 <body class="topical">
     <header>
-        <nav class="topicalnav">
-            <div class="overskrift">
-                <h1 class="overskrift1">Universal </h1>
-                <h1 class="overskrift2"> Design</h1>
-            </div>
-
-            <ul class="navigations">
-                <li class="button"><a href="./index.html">Home</a></li>
-                <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-                <li class="button"><a href="./topical.html">Topical page</a></li>
-                <li class="button"><a href="./campus.html">Our campus</a></li>
-            </ul>
+        <div class="fixedpositionnav">
+            <nav class="topicalnav">
+                <div class="overskrift">
+                    <h1 class="overskrift1">Universal </h1>
+                    <h1 class="overskrift2"> Design</h1>
+                </div>
+    
+                <ul class="navigations">
+                    <li class="button"><a href="./index.html">Home</a></li>
+                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+                    <li class="button"><a href="./topical.html">Topical page</a></li>
+                    <li class="button"><a href="./campus.html">Our campus</a></li>
+                </ul>
+        </div>
         </nav>
     </header>
 
-    <main>
+    <main class="topicalmain">
         <section class="video">
             <video src="./images/video (360p).mp4" muted loop autoplay></video>
         </section>
