--- a/topical.html
+++ b/topical.html
@@ -240,4 +240,8 @@
 
 <!--
     Er linkene nok synlige?
+    SKal vi ha oslomet logo eller skal vi ha noe annet?
+    Nav topical hvorfor ligger overskritene og boksene på ulik høyde
+    hvordan få bilde til å dekke øvre delen av skjermen?
+
 -->
