endret index bilde

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="content">
-        <img class="index-images" src="./images/campus_bilde1.jpg"
+        <img class="index-images" src="./images/P35-2400-1200.jpeg"
             alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
         <div class="introduction">
             <h1>Velkommen til Oslomet</h1>
