--- a/topical.html
+++ b/topical.html
@@ -34,7 +34,7 @@
             <video src="./images/video (360p).mp4" muted loop autoplay></video>
         </section>
 
-        <p class="smartphones"> Smartphones</p>
+        <h2 class="smartphones"> Smartphones</h2>
 
         <!-- Flexbox for å ha terms og introteksten side om side -->
         <section>
@@ -43,7 +43,7 @@
 
                     <h2 class="european"> European Accessibility Act</h2> 
 
-                    <p>
+                    <p class="european-p">
                         Norwegian government chooses to implement the European Accessibility Act
                         into Norwegian law and is prepared to issue large fines for digital services,
                         or devices that do not comply and adapt to the
@@ -71,15 +71,15 @@
                     <h2>
                         Key terms
                     </h2>
-                    <p>
+                    <p class="terms-p">
                         Universal design is based on creating products that ensure
                         accessibility and usability for all people no matter their
                         situation or state.</p>
-                    <p>
+                    <p class="terms-p">
                         Participatory processes is method that ensure that all people
                         involved in a decision has a say in it so that everyone is
                         represented when deciding how to develop something. </p>
-                    <p>
+                    <p class="terms-p">
                         Simple and Intuitive Use: The design should be easy to understand,
                         regardless of the user's experience, knowledge, language skills,
                         or current concentration level. </p>
@@ -105,7 +105,7 @@
                 <h2>
                     The current usage of smartphones in everyday life
                 </h2>
-                <p>
+                <p class="smarthphonesusage-p">
                     Smartphones are widely used in the world and almost
                     everyone has one. Most people rely on their smartphones to
                     communicate with others and really depend on them to get
@@ -122,7 +122,7 @@
             </div>
     
             <div class="fails">
-                <h2>
+                <h2 part="fails-p">
                     Three ways this technology fails to comply with key principles in universal design
                 </h2>
                 <p>
@@ -145,7 +145,7 @@
                 <h2>
                     Three ways this technology complies with key principles in universal design
                 </h2>
-                <p>
+                <p class="complies-p">
                     Smartphones have many great built-in features that make it
                     easier for people to use them such as screen readers, size
                     adjustments and voice commands. This makes the technology
@@ -162,7 +162,7 @@
                     What is the potential impact of a strict enforcement of universal
                     design on all digital products?
                 </h2>
-                <p>
+                <p class="impact-p">
                     First of all, more people will be able to use the products and
                     they will be more user-friendly. This will make digital products
                     more accessible and included to all people in society. If the
